# miko

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  miko.cpp  miko.h
CMakes/: Dependencies.cmake  Examples.cmake  Installation.cmake  Options.cmake  Platform.cmake  Sources.cmake  Target.cmake  ThirdParty.cmake  Utils.cmake
examples/: CMakeLists.txt  basic_example.cpp  debug_example.cpp  widget_showcase.cpp
include/miko/: miko.h
include/miko/core/: Application.h  Renderer.h  Window.h
include/miko/layout/: GridLayout.h  Layout.h  StackLayout.h
include/miko/platform/: D2DRenderer.h  Win32Window.h
include/miko/utils/: Color.h  Event.h  Math.h
include/miko/widgets/: Button.h  Label.h  Panel.h  TextBox.h  Widget.h
miko/: animation.cpp  animation.h  app.cpp  app.h  assets.cpp  assets.h  context.cpp  context.h  element.cpp  element.h  events.cpp  events.h  image.cpp  image.h  keymap.cpp  keymap.h  layout.cpp  layout.h  paint.cpp  paint.h  style.cpp  style.h  svg.cpp  svg.h  text.cpp  text.h  view.cpp  view.h  window.cpp  window.h
miko/assets/: font_loader.cpp  font_loader.h  image_loader.cpp  image_loader.h  resource_cache.cpp  resource_cache.h  shader_loader.cpp  shader_loader.h
miko/capture/: screen_capture.cpp  screen_capture.h  screen_capture_linux.cpp  screen_capture_linux.h  screen_capture_windows.cpp  screen_capture_windows.h
miko/http/: http_client.cpp  http_client.h  request.cpp  request.h  response.cpp  response.h
miko/inspector/: debug_overlay.cpp  debug_overlay.h  inspector.cpp  inspector.h  performance_monitor.cpp  performance_monitor.h
miko/layout/: constraints.cpp  constraints.h  flexbox.cpp  flexbox.h  grid.cpp  grid.h  tree.cpp  tree.h
miko/platform/linux/: font_linux.cpp  font_linux.h  system_linux.cpp  system_linux.h  text_linux.cpp  text_linux.h
miko/platform/sdl2/: clipboard_sdl2.cpp  clipboard_sdl2.h  events_sdl2.cpp  events_sdl2.h  filesystem_sdl2.cpp  filesystem_sdl2.h  input_sdl2.cpp  input_sdl2.h  window_sdl2.cpp  window_sdl2.h
miko/platform/windows/: font_windows.cpp  font_windows.h  system_windows.cpp  system_windows.h  text_windows.cpp  text_windows.h
miko/render/: image_renderer.cpp  image_renderer.h  material.cpp  material.h  mesh.cpp  mesh.h  path.cpp  path.h  quad.cpp  quad.h  renderer.cpp  renderer.h  scene.cpp  scene.h  text_renderer.cpp  text_renderer.h
miko/render/opengl/: buffer_opengl.cpp  buffer_opengl.h  context_opengl.cpp  (+7 more)
miko/text/: font_cache.cpp  font_cache.h  shaper.cpp  shaper.h  text_layout.cpp  text_layout.h  typography.cpp  typography.h
miko/util/: color.cpp  color.h  geometry.cpp  geometry.h  hash.cpp  hash.h  math.cpp  math.h  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  uuid.cpp  uuid.h
src/: miko.cpp
src/core/: Application.cpp  Renderer.cpp  Window.cpp
src/layout/: GridLayout.cpp  Layout.cpp  StackLayout.cpp
src/platform/: D2DRenderer.cpp  Win32Window.cpp
src/utils/: Color.cpp  Event.cpp  Math.cpp
src/widgets/: Button.cpp  Label.cpp  Panel.cpp  TextBox.cpp  Widget.cpp
(+12 files in other folders)
